# ros2-plansys2-aruco-explorer

./: LICENSE  README.md
aruco_interfaces/: CMakeLists.txt  package.xml
arucobot_description/: CMakeLists.txt  package.xml
arucobot_description/launch/: display.launch.py
arucobot_description/rviz/: arucobot_description.rviz
arucobot_description/urdf/: aruco_bot_diff.gazebo.xacro  aruco_bot_diff.xacro  materials.xacro  robot.xacro
arucobot_gazebo/: CMakeLists.txt  package.xml
arucobot_gazebo/config/: ekf.yaml  ros_gz_bridge.yaml
arucobot_gazebo/launch/: simulation.launch.py
arucobot_gazebo/models/aruco_marker_0/: model.config  model.sdf
arucobot_gazebo/models/aruco_marker_1/: model.config  model.sdf
arucobot_gazebo/models/aruco_marker_2/: model.config  model.sdf
arucobot_gazebo/models/aruco_marker_3/: model.config  model.sdf
arucobot_gazebo/models/aruco_marker_4/: model.config  model.sdf
arucobot_gazebo/rviz/: arucobot_gazebo.rviz
arucobot_gazebo/worlds/: aruco_world.world  simple_world.sdf
arucobot_interfaces/: CMakeLists.txt  package.xml
arucobot_interfaces/msg/: ArucoMarkers.msg
arucobot_navigation/: CMakeLists.txt  package.xml
arucobot_navigation/config/: nav2_params.yaml
arucobot_navigation/launch/: navigation.launch.py
arucobot_navigation/maps/: my_map.pgm  my_map.yaml
arucobot_navigation/rviz/: arucobot_navigation.rviz
arucobot_perception/: package.xml  setup.cfg  setup.py
arucobot_perception/arucobot_perception/: aruco_detector_node.py
arucobot_perception/config/: aruco_params.yaml
arucobot_planning/: CMakeLists.txt  package.xml
arucobot_planning/launch/: planning.launch.py
arucobot_planning/pddl/: domain.pddl  problem.pddl
arucobot_planning/scripts/: mission_controller.py
arucobot_planning/src/: move_action_node.cpp  survey_action_node.cpp  take_picture_action_node.cpp
