cmake_minimum_required(VERSION 3.8)
project(arucobot_interfaces)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# Find dependencies
find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)

# Generate the interfaces
rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/ArucoMarkers.msg"
  DEPENDENCIES std_msgs geometry_msgs
)

ament_package()