<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arucobot_planning</name>
  <version>0.0.0</version>
  <description>PlanSys2-based mission planning and action executors for autonomous ArUco detection and navigation</description>
  <maintainer email="mooeyad@gmail.com">Mohamed Eyad</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>arucobot_interfaces</exec_depend>
  <exec_depend>plansys2_bringup</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
